# sky-track-vision-dev

./: .env.example  .gitattributes  .gitignore  CONTRIBUTING.md  README.md  main.py  pilot.yaml  pyproject.toml  requirements-dev.txt  requirements-sim.txt  requirements.txt  run.ps1  settings.json  setup.sh  skypilot.py  smoke_test.py  sync_settings.ps1  sync_settings.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
agents/: __init__.py  control_agent.py  mission_agent.py  perception_agent.py  safety_agent.py  scene_agent.py
airsim_control/: __init__.py  camera.py  camera_buffer.py  client.py  movement.py  sensors.py
autonomy/: __init__.py  benchmark.py  contracts.py  energy.py  follow_controller.py  ibvs.py  mission.py  mission_spec.py  reporting.py  safety.py  scene_reasoner.py  targeting.py  watchdog.py
config/: __init__.py  runtime_logging.py  settings.py
demo/: __init__.py  director.py  stages.py
docs/: airsim_setup.md  architecture.md  skypilot_guide.md
scripts/: benchmark.py
skypilot/: __init__.py  __main__.py  airsim_bridge.py  hud.py  hybrid.py  llm_client.py  models.py  pilot.py  pilot_display.py  runtime_helpers.py  tools.py  vision_reader.py
tests/: __init__.py  conftest.py  test_airsim_bridge.py  test_airsim_client.py  test_benchmark.py  test_camera.py  test_detector.py  test_energy.py  test_follow_controller.py  test_ibvs.py  test_llm_client.py  test_logging_runtime.py  test_mission.py  test_mission_emergency.py  test_mission_spec.py  test_object_registry.py  test_perception_worker.py  test_pilot.py  test_pilot_display.py  test_recorder.py  test_reporting.py  test_runtime_helpers.py  test_safety.py  test_tools.py  test_tracker.py  test_watchdog.py
ui/: __init__.py  overlay.py  recorder.py
vision/: __init__.py  annotator.py  detector.py  object_registry.py  perception_worker.py  reid.py  tracker.py  utils.py
