[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skytrackvision"
version = "0.1.0"
description = "AirSim-powered autonomous drone tracking and mission orchestration runtime."
requires-python = ">=3.11"

[project.optional-dependencies]
# Live AirSim simulation only. Requires Python 3.11 (airsim's RPC stack uses the
# `asyncore` module removed in Python 3.12 / PEP 594). See requirements-sim.txt.
sim = ["airsim>=1.8.1"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM", "RUF"]
ignore = ["B008"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
pretty = true
exclude = ["outputs/"]

[[tool.mypy.overrides]]
module = ["airsim"]
ignore_missing_imports = true


